@@ -1,0 +1,5 @@
+<?php
+session_start();
+?>
+<a href="/vittaclinic2/index.php">Vittaclinic</a>
+<p>Médico minha página.</p>
